<resources>
    <string name="app_name">Абитуриент ИКТИБ</string>
    <string name="title_home">Мероприятия</string>
    <string name="title_dashboard">Магазин</string>
    <string name="title_notifications">Личный кабинет</string>
    <string name="table_of_lead_numm">#\t \t \t \t \tИмя\t\t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t  \t \t \t \t \tБаллы</string>
    <string name="table_of_lead_pos">1)\t \t \t \t \tВы \t \t \t \t \t\t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t \t  \t 500\n\n2)\n\n3)\n\n4)\n\n5)</string>
    <string name="registration">Регистрация</string>
    <string name="reg_text_bottom">Войдите в свою учетную запись</string>
    <string name="event1">Проведение «Дня открытых дверей ИКТИБ» по направлениям бакалавриата/специалитета</string>
    <string name="event1_title">День открытых дверей</string>
    <string name="event1_date">27 марта 2022</string>
    <string name="event_button">Принять участие</string>
    <string name="event2">Организация и проведение чемпионата по профессиональному мастерству среди школьников JuniorSkills в рамках IV Открытого отборочного Чемпионата Южного федерального университета по стандартам "Ворлдскиллс Россия (WorldSkills Russia)"</string>
    <string name="event2_title">Чемпионат среди школьников</string>
    <string name="event2_date">Апрель 2022</string>
    <string name="event3">Онлайн Хакатон по программированию для школьников</string>
    <string name="event3_title">Хакатон среди школьников</string>
    <string name="event3_date">11 апреля 2022</string>
    <string name="event_button_clicked">Заявка подана</string>
    <string name="button">Button</string>
    <string name="log_btn_enter">Войти</string>
    <string name="reg_btn_enter">Зарегистрироваться</string>
    <string name="reg_btn_first">Зарегистрироваться</string>
    <string name="log_btn_first">Войти</string>
    <string name="roll_bt">Прокрутить</string>
    <string name="roll_title">Колесо фортуны</string>
    <string name="roll_price">Cтоимость 5 ИКТИБаллов</string>
    <string name="roll_text">Испытай удачу и получи возможность выйграть больше ИКТИБаллов, мерч или увеличенную стипендию</string>
    <string name="roll_info_bt">Призы</string>
    <string name="price_title">Получить за ИКТИБаллы</string>
    <string name="log_edt_login">Логин</string>
    <string name="log_edt_pass">Пароль</string>
    <string name="btn_achiv">Достижения</string>
    <string name="btn_event">Мероприятия</string>
    <string name="btn_help">Помощь</string>
    <string name="brn_lead">Таблица лидеров</string>
    <string name="bliz_mp">Ближайшее мероприятие:</string>
    <string name="period_btn">Период</string>
    <string name="helppp_string">\tЧто такое ИКТИБаллы? ИКТИБаллы - это название условных единиц за которые вы можете приобрести как услуги, так и мерч института. \n\n\n \n Как получить ИКТИБаллы?\n Очень просто! Необходимо прийти на меноприятие, организованное институтом ИКТИБ, и отсканировать QR код. Или же вы можете попробовать выйграть призы в колесе фортуны!\n \n\n \n Как получить призы? \n Чтобы получить призы вам необходимо прийти в институт и забрать свою награду в специально отведённом месте.</string>

    <string name="price_merch">Мерч</string>
    <string name="iktib_event_price">3 ИКТИБалла</string>
</resources>